cabal-version: 3.0
name:          oso
version:       1.0.0
build-type:    Simple

library
  build-depends:
    , aeson
    , aeson-qq
    , base
    , bytestring
    , containers
    , inline-c
    , streaming
    , text
    , transformers

  default-language: Haskell2010
  hs-source-dirs:   lib
  exposed-modules:  
    Oso
    Polar.C
    Polar.C.Context
    Polar.C.Types
  include-dirs:     /home/ollie/work/oso/polar-c-api
  extra-libraries:  polar
  extra-lib-dirs:   /home/ollie/work/oso/target/debug
  ghc-options:
    -Weverything -Wno-prepositive-qualified-module
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-name-shadowing -Wno-unsafe -Wno-all-missed-specialisations

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          Main.hs
  build-depends:
    , aeson
    , base
    , containers
    , hspec
    , oso
    , streaming
    , string-qq
    , template-haskell
    , text
    , transformers

  ld-options:       "-Wl,-rpath,/home/ollie/work/oso/target/debug"
  ghc-options:
    -Weverything -Wno-prepositive-qualified-module -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-all-missed-specialisations

  other-modules:    ShouldMatch
